--- a/QtTcpClientConsumer/mainwindow.ui
+++ b/QtTcpClientConsumer/mainwindow.ui
@@ -31,7 +31,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>70</y>
+      <y>80</y>
       <width>256</width>
       <height>192</height>
      </rect>
@@ -41,7 +41,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>40</y>
+      <y>50</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -54,7 +54,7 @@
     <property name="geometry">
      <rect>
       <x>110</x>
-      <y>40</y>
+      <y>50</y>
       <width>89</width>
       <height>25</height>
      </rect>
@@ -67,7 +67,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>10</y>
+      <y>20</y>
       <width>191</width>
       <height>25</height>
      </rect>
@@ -131,13 +131,13 @@
      <string>Stop</string>
     </property>
    </widget>
-   <widget class="QWidget" name="widget" native="true">
+   <widget class="Plotter" name="widget" native="true">
     <property name="geometry">
      <rect>
-      <x>280</x>
-      <y>30</y>
-      <width>281</width>
-      <height>241</height>
+      <x>300</x>
+      <y>80</y>
+      <width>231</width>
+      <height>181</height>
      </rect>
     </property>
    </widget>
@@ -163,6 +163,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>Plotter</class>
+   <extends>QWidget</extends>
+   <header>plotter.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
